# advent

./: .gitignore  WORKSPACE
2019/1/: code.py
2019/11/: code.go
2019/12/: Makefile  code.f  code.py  code2.py
2019/13/: code.go
2019/14/: code.go  code.lisp  munge_input.py
2019/15/: code.go
2019/16/: Makefile  code.c  code.py
2019/17/: code.go
2019/18/: inputq00.txt  inputq01.txt  inputq10.txt  inputq11.txt
2019/19/: code.go
2019/2/: code.py
2019/21/: code.go
2019/22/: ADVENT.PAS  INPUT.TXT  advent.py  advent2.py
2019/23/: code.go  computer.go
2019/24/: advent.py
2019/3/: code.py
2019/4/: code.py
2019/5/: code.py
2019/6/: code.py
2019/7/: code.go  code.py
2019/8/: code.py  code2.py
2019/9/: code.go
2020/01/: problem1.py  problem2.py
2020/02/: problem1.py  problem2.py
2020/04/: problem1.py  problem2.py
2020/05/: problem.py
2020/06/: problem1.py  problem2.py
2020/07/: problem.py
2020/08/: problem.py
2020/09/: problem.py
2020/10/: problem.py
2020/11/: Makefile
2020/12/: problem1.py  problem2.py
2020/13/: problem1.py  problem2.py
2020/14/: problem1.py  problem2.py
2020/15/: problem.py  problem1.py
2020/16/: problem.go
2020/17/: Makefile
2020/18/: problem1.go  problem2.py
2020/19/: problem.go
2020/20/: Makefile  problem.py
2020/21/: input.txt  problem.go
2020/22/: problem1.py  problem2.py
2020/23/: Makefile  problem1.py  problem2.py
2020/24/: problem1.py
2021/01/: problem1.py  problem2.py
2021/02/: problem1.py  problem2.py
2021/03/: problem1.py
2021/04/: BUILD  part1.cc
2021/05/: part1.py
2021/06/: part1.cc
2021/07/: BUILD  part1.cc  part2.cc
2021/08/: part1.cc
2022/: Cargo.toml  make_target.pl
2022/01/calories/: Cargo.toml
2022/01/calories/src/: main.rs
2022/02/rochambeau/: Cargo.toml
2022/02/rochambeau/src/: main.rs
2022/03/rucksack/: Cargo.toml
2022/03/rucksack/src/: main.rs
2022/04/cleanup/: Cargo.toml
2022/04/cleanup/src/: main.rs
2022/05/stacks/: Cargo.toml
2022/05/stacks/src/: main.rs
2022/06/streams/: Cargo.toml
2022/06/streams/src/: main.rs
2022/07/disk/: Cargo.toml
2022/07/disk/src/: main.rs
2022/08/trees/: Cargo.toml
2022/08/trees/src/: main.rs
2022/09/rope/: Cargo.toml
2022/09/rope/src/: main.rs
2022/10/tube/: Cargo.toml
2022/10/tube/src/: main.rs
2022/11/monkeys/: Cargo.toml
2022/11/monkeys/src/: main.rs
2022/12/climb/: Cargo.toml
2022/12/climb/src/: main.rs
2022/13/distress/: Cargo.toml
2022/13/distress/src/: main.rs
2022/14/sand/: Cargo.toml
2022/14/sand/src/: main.rs
2022/15/beacon/: Cargo.toml
2022/15/beacon/src/: main.rs
2022/16/valves/: Cargo.toml
2022/16/valves/src/: main.rs
2022/17/rocks/: Cargo.toml
2022/17/rocks/src/: main.rs
2022/18/lava/: Cargo.toml
2022/18/lava/src/: main.rs
2022/19/blueprint/: Cargo.toml
2022/19/blueprint/src/: main.rs
2022/20/mix/: Cargo.toml
2022/20/mix/src/: main.rs
2022/21/monkeys/: Cargo.toml
2022/21/monkeys/src/: main.rs
2022/21/monkeys2/src/: main.rs
2022/22/map/: Cargo.toml  empty4x4.txt  empty4x4_2.txt  scratch.txt
2022/22/map/src/: main.rs
2022/23/elves/: Cargo.toml
2022/23/elves/src/: main.rs
2022/24/blizzard/: Cargo.toml
2022/24/blizzard/src/: main.rs
2022/25/heat/: Cargo.toml
2022/25/heat/src/: main.rs
2023/: Cargo.toml  make_20_graph.py
2023/src/: lib.rs
2024/: .gitignore  advent2024.cabal
2024/.devcontainer/: devcontainer.json
2024/app/: Main01.hs
2024/src/01/: Main.hs
2024/src/02/: Main.hs
2024/src/03/: Main.hs
2024/src/04/: Main.hs
2024/src/05/: Main.hs
(+39 files in other folders)
