[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
num = "0.4.1"
priority-queue = "1.3.2"
rand = "0.8.5"
regex = "1.10.2"
thiserror = "1.0.50"
