cabal-version:      3.0
name:               advent2024
version:            0.1.0.0

-- synopsis:
-- description:

license:            Apache-2.0
author:             Bee Klimt
maintainer:         bklimt@gmail.com
build-type:         Simple

-- license-file:
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 01
    import:           warnings
    main-is:          Main01.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

