cabal-version:      3.0
name:               advent2024
version:            0.1.0.0

-- synopsis:
-- description:

license:            Apache-2.0
author:             Bee Klimt
maintainer:         bklimt@gmail.com
build-type:         Simple

-- license-file:
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 01
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src/01
    default-language: Haskell2010

executable 02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src/02
    default-language: Haskell2010

executable 03
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, regex-pcre
    hs-source-dirs:   src/03
    default-language: Haskell2010

